fix(scalars): fix the dark mode

--- a/packages/design-system/src/globals.css
+++ b/packages/design-system/src/globals.css
@@ -16,7 +16,9 @@
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
   }
-
+  body {
+		@apply dark:bg-black  min-h-screen relative;
+	}
   /* Modal */
   .modal-shadow {
     box-shadow:
@@ -244,4 +246,18 @@ h5,
 h6,
 p {
   color: var(--gray-900);
+}
+
+/* Light Theme */
+.light {
+  --background-color: #ffffff; /* Background */
+  --text-color: #333333; /* Text */
+  --primary-color: #1d4ed8; /* Primary color */
+}
+
+/* Dark Theme */
+.dark {
+  --background-color: #1a1a2e; /* Background */
+  --text-color: #f5f5f5; /* Text */
+  --primary-color: #3b82f6; /* Primary color */
 }
